[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/match_history.gd" type="Script" id=1]
[ext_resource path="res://theme-default.tres" type="Theme" id=2]
[ext_resource path="res://art-built/9patch/background-title.png" type="Texture2D" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://fonts/Amaranth-Regular-60.tres" type="FontFile" id=5]
[ext_resource path="res://fonts/Amaranth-Regular-24.tres" type="FontFile" id=6]
[ext_resource path="res://scripts/scroll_container_draggable.gd" type="Script" id=7]
[ext_resource path="res://art-built/button-back-small.png" type="Texture2D" id=8]
[ext_resource path="res://components/game_history.tscn" type="PackedScene" id=9]
[ext_resource path="res://art-built/button-done.png" type="Texture2D" id=10]
[ext_resource path="res://fonts/Amaranth-Bold-24.tres" type="FontFile" id=11]
[ext_resource path="res://art-built/button-view.png" type="Texture2D" id=12]

[node name="root" type="Node"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="bg" type="Sprite2D" parent="ui"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 4 )

[node name="title_label" type="Label" parent="ui"]
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource( 5 )
text = "Match History"
align = 1

[node name="offline_warning" type="Label" parent="ui"]
anchor_right = 1.0
offset_top = 124.0
offset_bottom = 198.0
theme_override_fonts/font = ExtResource( 6 )
text = "offline"
align = 1

[node name="scroll_container" type="ScrollContainer" parent="ui"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = 172.0
offset_right = 242.0
offset_bottom = -142.0
script = ExtResource( 7 )

[node name="v_box_container" type="VBoxContainer" parent="ui/scroll_container"]
theme_override_constants/separation = 20

[node name="back_button" type="TextureButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -100.0
offset_right = 151.0
offset_bottom = -12.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="game_history_panel" type="ColorRect" parent="ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="game_history" parent="ui/game_history_panel" instance=ExtResource( 9 )]
anchor_bottom = 1.0
offset_top = 130.0
offset_bottom = -144.0

[node name="done_button" type="TextureButton" parent="ui/game_history_panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -125.0
offset_right = 109.0
offset_bottom = -48.0
texture_normal = ExtResource( 10 )
expand = true

[node name="template_row" type="Control" parent="ui"]
offset_left = 26.0
offset_top = 189.0
offset_right = 512.0
offset_bottom = 289.0
custom_minimum_size = Vector2( 486, 100 )
mouse_filter = 2

[node name="title_label" type="RichTextLabel" parent="ui/template_row"]
anchor_right = 1.0
offset_bottom = 56.0
mouse_filter = 2
theme_override_fonts/bold_font = ExtResource( 11 )
theme_override_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
text = "[b]Victory[/b] vs. autofill"
text = "Victory vs. autofill"

[node name="date_label" type="Label" parent="ui/template_row"]
offset_left = 3.0
offset_top = 37.0
offset_right = 117.0
offset_bottom = 67.0
text = "2019-03-14"

[node name="view_button" type="TextureButton" parent="ui/template_row"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_top = 9.0
offset_right = 1.0
offset_bottom = 59.0
texture_normal = ExtResource( 12 )
expand = true

